# confcheck-audittool

./: .gitignore  README.md  audittool.cabal  confcheck-audittool.cabal  stack.yaml
app/: Main.hs
src/: AuditTool.hs
