name:                audittool
version:             0.1.0.0
synopsis:            Parses the audittool output.
description:         Please see README.md
homepage:            https://github.com/bartavelle/confcheck-audittool#readme
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Simon Marechal
maintainer:          bartavelle@gmail.com
copyright:           Simon Marechal
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AuditTool
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , confcheck-types
                     , bytestring
                     , text
                     , unordered-containers
                     , lens
                     , thyme
                     , hexpat-lens
                     , hexpat
                     , mtl
                     , base16-bytestring
                     , data-textual
                     , text-printer
                     , parsers
  default-language:    Haskell2010

executable audittool-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -with-rtsopts=-M4G
  build-depends:       base
                     , audittool
                     , bytestring
  default-language:    Haskell2010

test-suite audittool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , audittool
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bartavelle/audittool
